src/test/ui/default-ty-param-fallback/method_call_test.stderr
error[E0282]: type annotations needed
  --> $DIR/method_call_test.rs:23:9
   |
23 |     let f = Foo.method();
   |         ^
   |         |
   |         cannot infer type for `_`
   |         consider giving `f` a type

error: aborting due to previous error

